b=525409 chain nsBaseWidget::Destroy() from nsWindow::Destroy() r=karlt